[package]
name = "posara"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "MIT"
authors = ["knh190"]
description = "General OS Myriad runtime."

[features]
default = ["compiler", "fs", "gfx", "sfx", "synth", "midi", "test"]
compiler = ["dep:abrase"]
fs = []
gfx = ["dep:minifb"]
sfx = ["dep:cpal"]
synth = ["sfx"]
midi = ["dep:midir", "dep:toml"]
test = []

[[bin]]
name = "posara"
required-features = ["gfx", "sfx"]

[lib]
doctest = false

[profile.dev]
opt-level = 2

# optimized + symbolized: clean flamegraphs via `samply record target/release/posara bench cart`
[profile.release]
debug = true

[dependencies]
minifb = { version = "0.27", optional = true }
cpal = { version = "0.15", optional = true }
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
color_quant = "1.1"
fontdue = "0.9"
symphonia = { version = "0.5", default-features = false, features = ["mp3"] }
midir = { version = "0.10", optional = true }
toml  = { version = "0.8", optional = true, default-features = false, features = ["parse"] }
midly = "0.5"
myriad-rs = { git = "https://github.com/KHN190/Abrase", branch = "dev" }
polka-rs  = { git = "https://github.com/KHN190/Abrase", branch = "dev" }
abrase    = { git = "https://github.com/KHN190/Abrase", optional = true, branch = "dev" }

# Local sibling checkout (CLAUDE.md: ~/Desktop/code/abrase). Lets posara build
# against unpushed abrase changes. Drop once those land on the dev branch.
[patch."https://github.com/KHN190/Abrase"]
myriad-rs = { path = "../abrase/crates/myriad" }
polka-rs  = { path = "../abrase/crates/polka" }
abrase    = { path = "../abrase/crates/abrase" }
